tests/int/use_command/snapshots/integration__int__use_command__include_tests__modules_advanced_globs_tests_r_t.snap
---
source: tests/int/use_command/include_tests.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/modules
    - use
    - advanced_globs
    - "-r"
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
crate::advanced_globs::Consumer
crate::advanced_globs::MultiImpl
crate::advanced_globs::Provider
crate::advanced_globs::Transformer
crate::advanced_globs::deep_function
crate::advanced_globs::internal::*
crate::advanced_globs::layer1_function
crate::advanced_globs::layer2_function
crate::dir_module::child_file
crate::file_module
crate::visibility

----- stderr -----
