tests/int/use_command/snapshots/integration__int__use_command__include_tests__modules_advanced_globs_tests_r_t_e.snap
---
source: tests/int/use_command/include_tests.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - advanced_globs
    - "-r"
    - "-t"
    - "-e"
---
success: true
exit_code: 0
----- stdout -----
crate::advanced_globs::Consumer
crate::advanced_globs::MultiImpl
crate::advanced_globs::Provider
crate::advanced_globs::Transformer
crate::advanced_globs::aliased_module::OriginalStruct
crate::advanced_globs::aliased_module::original_name
crate::advanced_globs::deep_function
crate::advanced_globs::enum_variants::*
crate::advanced_globs::internal::*
crate::advanced_globs::layer1::*
crate::advanced_globs::layer1::layer2::*
crate::advanced_globs::layer1::layer2::layer3::*
crate::advanced_globs::layer1_function
crate::advanced_globs::layer2_function
crate::advanced_globs::macro_module::*
crate::advanced_globs::original::*
crate::advanced_globs::shadowing::shadowed_func
crate::advanced_globs::trait_providers::*
crate::advanced_globs::unix_specific::*
crate::advanced_globs::windows_specific::*
crate::dir_module::child_file
crate::file_module
crate::visibility

----- stderr -----
