tests/int/use_command/snapshots/integration__int__use_command__include_tests__modules_advanced_globs_tests_t.snap
---
source: tests/int/use_command/include_tests.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/modules
    - use
    - advanced_globs
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
crate::advanced_globs::internal::*
crate::dir_module::child_file
crate::file_module
crate::visibility

----- stderr -----
