tests/int/use_command/snapshots/integration__int__use_command__include_tests__modules_glob_patterns_tests_r_t_e.snap
---
source: tests/int/use_command/include_tests.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - glob_patterns
    - "-r"
    - "-t"
    - "-e"
---
success: true
exit_code: 0
----- stdout -----
crate::dir_module
crate::file_module
crate::glob_patterns::constants::*
crate::glob_patterns::mixed_exports::func_one
crate::glob_patterns::mixed_exports::func_three
crate::glob_patterns::mixed_exports::func_two
crate::glob_patterns::mixed_exports::special_function
crate::glob_patterns::outer::*
crate::glob_patterns::outer::inner::*
crate::glob_patterns::self_ref::*
crate::glob_patterns::set_a::*
crate::glob_patterns::set_b::*
crate::glob_patterns::traits::*
crate::glob_patterns::types::*
crate::glob_patterns::utilities::*

----- stderr -----
