tests/int/use_command/snapshots/integration__int__use_command__include_tests__modules_glob_patterns_tests_t.snap
---
source: tests/int/use_command/include_tests.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - glob_patterns
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
crate::dir_module
crate::file_module
crate::glob_patterns::self_ref::*

----- stderr -----
