tests/int/use_command/snapshots/integration__int__use_command__include_tests__modules_glob_showcase_tests_r_t_e.snap
---
source: tests/int/use_command/include_tests.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - glob_showcase
    - "-r"
    - "-t"
    - "-e"
---
success: true
exit_code: 0
----- stdout -----
crate::file_module::*
crate::glob_showcase::ErrorKind
crate::glob_showcase::Status
crate::glob_showcase::api::delete_data
crate::glob_showcase::api::get_data
crate::glob_showcase::api::set_data
crate::glob_showcase::config::client::*
crate::glob_showcase::config::logging::*
crate::glob_showcase::config::server::*
crate::glob_showcase::database::connect
crate::glob_showcase::database::disconnect
crate::glob_showcase::database::execute
crate::glob_showcase::errors::NotFoundError
crate::glob_showcase::errors::ValidationError
crate::glob_showcase::models::Comment
crate::glob_showcase::models::Post
crate::glob_showcase::models::User
crate::glob_showcase::traits::Identifiable
crate::glob_showcase::traits::Nameable
crate::glob_showcase::traits::Validatable
crate::glob_showcase::utils::math::add
crate::glob_showcase::utils::math::subtract
crate::inline_modules::*
crate::nesting::level1::level2::*

----- stderr -----
